Update people pages, news, and job postings

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,8 @@
                 {% else %}
                     {% if page.url == '/' %}
                         {% assign chinese_url = '/cn/' %}
+                    {% elsif page.url == '/people/yuanqing-feng/' %}
+                        {% assign chinese_url = '/cn/people/' %}
                     {% else %}
                         {% assign chinese_url = '/cn' | append: page.url %}
                     {% endif %}
